using Avalonia;
using Avalonia.Controls.ApplicationLifetimes;
using Avalonia.Markup.Xaml;
using Microsoft.Extensions.DependencyInjection;
using mpvmux.Constants;
using mpvmux.Models;
using mpvmux.Services;
using mpvmux.ViewModels;
using mpvmux.Views;
using System.IO;

namespace mpvmux;

public partial class App : Application
{
    private IConfigService cs;
    private IHistoryService hs;

    public override void Initialize()
    {
        AvaloniaXamlLoader.Load(this);
    }

    public override void OnFrameworkInitializationCompleted()
    {
        Directory.CreateDirectory(AppConstants.BaseFolderPath);

        if (ApplicationLifetime is IClassicDesktopStyleApplicationLifetime desktop)
        {

            var collection = new ServiceCollection();
            collection.AddCommonServices();

            var mainWindow = new MainWindow();

            collection.AddSingleton<IWindowService>(
                x => new WindowService(mainWindow, x)
            );

            collection.AddSingleton<IFilePickerService>(
                _ => new FilePickerService(mainWindow)
            );

            collection.AddSingleton<IConfigService, ConfigService>();
            collection.AddSingleton<IHistoryService, HistoryService>();

            var services = collection.BuildServiceProvider();

            hs = services.GetRequiredService<IHistoryService>();
            cs = services.GetRequiredService<IConfigService>();

            var vm = services.GetRequiredService<MainWindowViewModel>();


            mainWindow.DataContext = vm;

            desktop.MainWindow = mainWindow;

            mainWindow.Loaded += async (_, _) => await vm.InitializeAsync();

            mainWindow.Closing += OnWindowClosing;

        }

        base.OnFrameworkInitializationCompleted();
    }

    private async void OnWindowClosing(object? sender, Avalonia.Controls.WindowClosingEventArgs e)
    {
        await hs.SaveHistoryAsync();
        await cs.SaveAsync();
    }
}

public static class ServiceCollectionExtensions
{
    public static void AddCommonServices(this IServiceCollection collection)
    {
        collection.AddSingleton<IVideoRepositoryService, VideoRepositoryService>();
        collection.AddSingleton<IUpdateService, UpdateService>();
        collection.AddSingleton<IBundleFileService, BundleFileService>();
        collection.AddSingleton<IPlayerService, PlayerService>();
        collection.AddSingleton<IDialogHelper, DialogHelper>();

        collection.AddSingleton<HistoryModel>();
        collection.AddSingleton<MediaContext>();
        collection.AddSingleton<MetadataRepository>();

        collection.AddSingleton<TopMenuViewModel>();
        collection.AddSingleton<BottomPanelViewModel>();
        collection.AddSingleton<AboutWindowViewModel>();

        collection.AddTransient<UpdaterViewModel>();

        collection.AddSingleton<MainWindowViewModel>();
    }
}