namespace mpvmux.Models;

internal record MediaRecord(string Name, string Path);
